Tweak docs styling, add serve-docs script

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -113,7 +113,7 @@
     );
   });
 
-  if (document.body.scrollHeight > window.innerHeight) {
+  if (document.body.scrollHeight > window.innerHeight + 500) {
     $(document.body).scrollspy({
       target: '#current-page-table-of-contents',
       offset: 40
