--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -37,6 +37,7 @@ body {
   font-size: 24px;
   position: fixed;
   background-color: white;
+  opacity: 0.75;
   box-shadow: 1px 1px 5px #aaa;
   left: $sidebar-width;
   padding: 5px 10px;
