--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -31,6 +31,12 @@ body {
   overflow-y: auto;
   border-right: 1px solid #ccc;
   z-index: 1;
+
+  .github-repo {
+    display: inline-block;
+    padding-left: 3.75em;
+    font-size: .85em;
+  }
 }
 
 #sidebar-toggle-link {
