Make underline-on-hover work for spans within links
Refs #535

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -74,6 +74,10 @@ a[href^="http"]:after {
   text-decoration: underline;
 }
 
+a > span {
+  text-decoration: inherit;
+}
+
 .table-of-contents-section {
   border-bottom: 1px solid #ccc;
 }
