--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -187,3 +187,7 @@ a.highlighted {
   text-decoration: underline red dashed;
   -webkit-text-decoration: underline red dashed;
 }
+
+#docsearch {
+  padding: 15px;
+}
